fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@ body {
 
 .blog {
   margin: auto;
-  margin-bottom: 100px;
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
 
 #medium-widget {
@@ -25,7 +26,7 @@ body {
   padding-bottom: 200px;
   display: block;
   background-color: grey;
-  padding-top: 30px;
+  padding-top: 100px;
 }
 
 .contact input[type=text] {
@@ -91,9 +92,9 @@ a.active {
 }
 
 .portfolio {
-  margin-bottom: 100px;
+  padding-top: 100px;
   background-color: grey;
-  padding: 30px 0;
+  padding-bottom: 100px;
 }
 
 .projects {
